--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,30 +1,67 @@
 
-services:
-  nginx:
-    build: requirements/nginx
-    container_name: nginx
-    ports:
-      - "80:80"
-
-  mariadb:
-    build: requirements/mariadb  # Ensure you have a Dockerfile inside srcs/mariadb
-    container_name: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    networks:
-      - app-network
-    restart: always
-    env_file:
-      - .env
+volumes:
+        wordpress:
+                name: wordpress
+                driver: local
+                driver_opts:
+                        device: ~/inception/srcs/requirements/wordpress
+                        o: bind
+                        type: none
+        mariadb:
+                name: mariadb
+                driver: local
+                driver_opts:
+                        device: ~/inception/srcs/requirements/mariadb
+                        o: bind
+                        type: none
 
 networks:
-  app-network:
+  inception:
+    name: inception
 
-volumes:
-  mariadb_data:
+services:
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx/.
+    image: nginx:42
+    ports:
+     - "443:443"
+    depends_on:
+      - wordpress
+    volumes:
+     - wordpress:/var/www/html
+    networks:
+      - inception
+    env_file:
+      - .env
+    restart: always
 
+
+
+  wordpress:
+    container_name: wordpress
+    build: ./requirements/wordpress/.
+    image: wordpress:42
+    depends_on:
+      - mariadb
+    volumes:
+      - wordpress:/var/www/html
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+
+
+    
+  mariadb:
+    container_name: mariadb
+    build: ./requirements/mariadb/.
+    image: mariadb:42
+    volumes:
+      - mariadb:/var/lib/mysql
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
