--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,23 @@
 #maraidb settings
-DB_NAME=my_database
-DB_USER=oharoon
-DB_PASSWORD=password
-DB_ROOT_PASSWORD=my_root_password
+db_name=my_database
+db_user=user
+db_pwd=password
+db_root_pwd=my_root_password
+
+# MYSQL SETUP
+db1_name=lol1
+db1_user=ss
+db1_pwd=tt
+
+DOMAIN_NAME=oharoon.42.fr
+CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+
+# WORDPRESS SETUP
+WP_TITLE=inception
+WP_ADMIN_USR=root
+WP_ADMIN_PWD=1234
+WP_ADMIN_EMAIL=root@gmail.com
+WP_USR= user
+WP_EMAIL=user@gmail.com
+WP_PWD=123
+
