need to fix according to new env

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,23 +1,36 @@
-#maraidb settings
-db_name=my_database
-db_user=user
-db_pwd=password
-db_root_pwd=my_root_password
 
-# MYSQL SETUP
-db1_name=lol1
-db1_user=ss
-db1_pwd=tt
+LOGIN=oharoon
 
-DOMAIN_NAME=oharoon.42.fr
+DOMAIN=${LOGIN}.42.fr
+
+DOMAIN_IP=10.0.2.255
+
+
 CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 
-# WORDPRESS SETUP
-WP_TITLE=inception
-WP_ADMIN_USR=root
-WP_ADMIN_PWD=1234
-WP_ADMIN_EMAIL=root@gmail.com
-WP_USR= user
-WP_EMAIL=user@gmail.com
-WP_PWD=123
+# mariadb
+MARIADB_ROOT_PASS=root123
+MARIADB_USER_NAME=${LOGIN}
+MARIADB_USER_PASS=123
+MARIADB_HOST=mariadb
+MARIADB_PORT=3306
+MARIADB_DB_NAME=my_database
 
+# wordpress
+WORDPRESS_DB_NAME=inception
+
+WORDPRESS_URL=https://${DOMAIN}
+WORDPRESS_TITLE="INCEPTION"
+
+WORDPRESS_ADMIN_NAME=RANDOM_ADMIN
+WORDPRESS_ADMIN_PASS=123
+WORDPRESS_ADMIN_EMAIL=RANDOM_ADMIN@gmail.com
+
+WORDPRESS_USER_NAME=wordpress_user
+WORDPRESS_USER_PASS=123
+WORDPRESS_USER_EMAIL=wordpress_user@gmail.com
+
+WORDPRESS_PORT=9000
+
+# nginx
+NGINX_PORT=443
