--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,55 +1,50 @@
-FROM alpine:3.14
+FROM debian:bullseye
 
-ARG	WORDPRESS_VERSION=5.8.1
+ARG WORDPRESS_VERSION=5.8.1
 
-# - update and upgrade the Alpine Linux package manager packages
-# - install PHP and mariadb-client packages along with other dependencies
-RUN apk update \
-  && apk upgrade \
-  && apk add --no-cache wget gettext \
-    php7 php7-fpm php7-mysqli php7-zip php7-gd \
-    php7-mbstring php7-cli php7-opcache php7-zlib \
-    php7-curl php7-json php7-iconv php7-gettext \
-    php7-session php7-phar mariadb-client php7-pdo php7-pdo_mysql \
-    php7-dom php7-ctype php7-bcmath php7-fileinfo php7-intl php7-mcrypt \
-    php7-mysqlnd php7-openssl php7-pdo_pgsql php7-pdo_sqlite php7-posix \
-    php7-simplexml php7-soap php7-tokenizer php7-xml php7-xmlreader \
-    php7-xmlwriter
+# Update and upgrade the Debian package manager packages
+# Install PHP and mariadb-client packages along with other dependencies
+RUN apt-get update \
+  && apt-get upgrade -y \
+  && apt-get install -y wget gettext \
+    php php-fpm php-mysqli php-zip php-gd \
+    php-mbstring php-cli php-opcache php-zlib \
+    php-curl php-json php-iconv php-gettext \
+    php-session php-phar mariadb-client php-pdo php-pdo_mysql \
+    php-dom php-ctype php-bcmath php-fileinfo php-intl \
+    php-mysqlnd php-openssl php-pdo_pgsql php-pdo_sqlite php-posix \
+    php-simplexml php-soap php-tokenizer php-xml php-xmlreader \
+    php-xmlwriter
 
-# - download the WordPress CLI and add it to the PATH and make executable
+# Download the WordPress CLI and add it to the PATH and make executable
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-	--output-document=/usr/local/bin/wp \
+  --output-document=/usr/local/bin/wp \
   && chmod +x /usr/local/bin/wp
 
-# - create the wordpress directories
-# - set the permissions of the template config file to be readable, writeable, and
-#   executable by the owner and readable and writeable by others
+# Create the WordPress directories
+# Set the permissions of the template config file to be readable, writable, and executable by the owner and readable and writable by others
 RUN mkdir -p /run/php /var/www/html/wordpress \
   && chmod -R 755 /var/www/html/wordpress
 
-# https://askubuntu.com/questions/873839/what-is-the-www-data-user
+# Add the "wordpress_server" group and user
+RUN groupadd -r wordpress_server \
+  && useradd -r -g wordpress_server wordpress_server
 
-# - add the "wordpress_server" group and user
-RUN addgroup -S wordpress_server \
-  && adduser -S wordpress_server -G wordpress_server
-
-# https://www.php.net/manual/en/install.fpm.php
-
-# - copy the config file to container root as a template file
+# Copy the config file to container root as a template file
 COPY ./conf/www.conf /www.conf.tmpl
 
-# - remove the default config file if it exists
-RUN rm -f /etc/php7/php-fpm.d/www.conf
+# Remove the default config file if it exists
+RUN rm -f /etc/php/7.4/fpm/pool.d/www.conf
 
 WORKDIR /var/www/html/wordpress
 
-# - download the WordPress core using the CLI
+# Download the WordPress core using the CLI
 RUN wp core download --allow-root --version=$WORDPRESS_VERSION
 
-# - copy the setup script to the container root
-COPY ./tools/run.sh /run.sh
+# Copy the setup script to the container root
+COPY ./tools/script.sh /script.sh
 
-# - set the setup script as executable
-RUN chmod +x /run.sh
+# Set the setup script as executable
+RUN chmod +x /script.sh
 
 ENTRYPOINT [ "/script.sh" ]
