possible fixes for wp and mariadb

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,10 +1,8 @@
 FROM debian:bullseye
 
-
-RUN apt-get update -y && apt-get install mariadb-server -y
+RUN apt-get update -y && apt-get install -y mariadb-server
 
 COPY ./tools/50-server.cnf /etc/mysql/mariadb.conf.d/
-
 
 COPY ./tools/script.sh /
 
