--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,42 +1,52 @@
-
 volumes:
-        wordpress:
-                name: wordpress
-                driver: local
-                driver_opts:
-                        device: ~/inception/srcs/requirements/wordpress
-                        o: bind
-                        type: none
-        mariadb:
-                name: mariadb
-                driver: local
-                driver_opts:
-                        device: ~/inception/srcs/requirements/mariadb
-                        o: bind
-                        type: none
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: ~/inception/data/wp
+      o: bind
+      type: none
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      device: ~/inception/data/mariadb
+      o: bind
+      type: none
 
 networks:
   inception:
     name: inception
 
 services:
+
+  mariadb:
+    container_name: mariadb
+    build: ./requirements/mariadb/.
+    image: mariadb:42
+    volumes:
+      - mariadb:/var/lib/mysql
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+
   nginx:
     container_name: nginx
     build: ./requirements/nginx/.
     image: nginx:42
     ports:
-     - "443:443"
+      - "443:443"
     depends_on:
       - wordpress
     volumes:
-     - wordpress:/var/www/html
+      - wordpress:/var/www/html
     networks:
       - inception
     env_file:
       - .env
     restart: always
-
-
 
   wordpress:
     container_name: wordpress
@@ -46,20 +56,6 @@ services:
       - mariadb
     volumes:
       - wordpress:/var/www/html
-    env_file:
-      - .env
-    networks:
-      - inception
-    restart: always
-
-
-    
-  mariadb:
-    container_name: mariadb
-    build: ./requirements/mariadb/.
-    image: mariadb:42
-    volumes:
-      - mariadb:/var/lib/mysql
     env_file:
       - .env
     networks:
