--- a/srcs/.env
+++ b/srcs/.env
@@ -15,6 +15,9 @@ MARIADB_USER_PASS=123
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
 MARIADB_DB_NAME=my_database
+MARIADB_SOCKET=/run/mysqld/mysqld.sock
+MARIADB_TCPIP_HOST=localhost
+
 
 # wordpress
 WORDPRESS_DB_NAME=inception
