errors for everyone

--- a/srcs/.env
+++ b/srcs/.env
@@ -14,7 +14,7 @@ MARIADB_USER_NAME=${LOGIN}
 MARIADB_USER_PASS=123
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
-MARIADB_DB_NAME=my_database
+MARIADB_DB_NAME=inception
 MARIADB_SOCKET=/run/mysqld/mysqld.sock
 MARIADB_TCPIP_HOST=localhost
 
@@ -25,7 +25,7 @@ WORDPRESS_URL=https://${DOMAIN}
 WORDPRESS_TITLE="INCEPTION"
 
 WORDPRESS_ADMIN_NAME=RANDOM_ADMIN
-WORDPRESS_ADMIN_PASS=123
+WORDPRESS_ADMIN_PASS=admin123
 WORDPRESS_ADMIN_EMAIL=RANDOM_ADMIN@gmail.com
 
 WORDPRESS_USER_NAME=wordpress_user
@@ -33,6 +33,7 @@ WORDPRESS_USER_PASS=123
 WORDPRESS_USER_EMAIL=wordpress_user@gmail.com
 
 WORDPRESS_PORT=9000
+WP_PREFIX=_
 
 # nginx
 NGINX_PORT=443
