--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,8 +5,7 @@ RUN apt -y update && apt install -y nginx && apt install openssl -y
 
 
 
-
-# COPY ./tools/conf /etc/nginx/sites-available/
+COPY ./tools/conf /etc/nginx/sites-available/
 
 COPY ./tools/script.sh /
 
