turns out the problem is the wordpress container, find and fix

--- a/srcs/.env
+++ b/srcs/.env
@@ -20,6 +20,7 @@ WORDPRESS_DB_NAME=inception
 
 WORDPRESS_URL=https://${DOMAIN}
 WORDPRESS_TITLE="INCEPTION"
+WORDPRESS_ADMIN_URL=$(WORDPRESS_URL)/wp-admin
 
 WORDPRESS_ADMIN_NAME=RANDOM_ADMIN
 WORDPRESS_ADMIN_PASS=admin123
