--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,11 @@
-FROM debian:bullseye
+FROM debian:oldstable
 
-RUN apt-get update -y && apt-get install -y mariadb-server
+RUN apt-get update -y && apt-get upgrade -y
 
+WORKDIR /var/lib/mysql
 
+RUN apt-get install -y mariadb-server
 
-COPY ./tools/script.sh /
+COPY script.sh /etc/script.sh
 
-RUN chmod +x /script.sh
-
-CMD ["/script.sh"]
+ENTRYPOINT ["/bin/bash", "/etc/script.sh"]
