--- a/srcs/.env
+++ b/srcs/.env
@@ -6,11 +6,11 @@ DOMAIN=${LOGIN}.42.fr
 DOMAIN_IP=10.0.2.255
 
 
-CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+CERTS_=/etc/ssl/nginx-selfsigned.crt
 
 MARIADB_ROOT_PASS=root123
-MARIADB_USER_NAME=${LOGIN}
-MARIADB_USER_PASS=123
+MARIADB_USER_NAME=oharoon
+MARIADB_USER_PASS=user123
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
 MARIADB_DB_NAME=inception
@@ -20,7 +20,7 @@ WORDPRESS_DB_NAME=inception
 
 WORDPRESS_URL=https://${DOMAIN}
 WORDPRESS_TITLE="INCEPTION"
-WORDPRESS_ADMIN_URL=$(WORDPRESS_URL)/wp-admin
+WORDPRESS_ADMIN_URL=oharoon.42.fr/wp-admin
 
 WORDPRESS_ADMIN_NAME=RANDOM_ADMIN
 WORDPRESS_ADMIN_PASS=admin123
@@ -29,9 +29,3 @@ WORDPRESS_ADMIN_EMAIL=RANDOM_ADMIN@gmail.com
 WORDPRESS_USER_NAME=wordpress_user
 WORDPRESS_USER_PASS=123
 WORDPRESS_USER_EMAIL=wordpress_user@gmail.com
-
-WORDPRESS_PORT=9000
-
-WP_PREFIX=_
-
-NGINX_PORT=443
