--- a/srcs/requirements/nginx/emprestado.conf
+++ b/srcs/requirements/nginx/emprestado.conf
@@ -4,8 +4,8 @@ server
 	listen [::]:443 ssl;
 
 	server_name oharoon.42.fr;
-	ssl_certificate /etc/nginx/ssl/ssl.crt;
-	ssl_certificate_key /etc/nginx/ssl/ssl.key;
+	ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+	ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
 	ssl_protocols TLSv1.3;
 
 	root /var/www/html/;
