--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,130 +1,130 @@
-# volumes:
-#   wordpress:
-#     name: wordpress
-#     driver: local
-#     driver_opts:
-#       device: ~/inception/data/wordpress
-#       o: bind
-#       type: none
-#   mariadb:
-#     name: mariadb
-#     driver: local
-#     driver_opts:
-#       device: ~/inception/data/mariadb
-#       o: bind
-#       type: none
+volumes:
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: ~/inception/data/wordpress
+      o: bind
+      type: none
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      device: ~/inception/data/mariadb
+      o: bind
+      type: none
 
-# networks:
-#   inception:
-#     name: inception
-#     driver: bridge
-
-# services:
-
-#   mariadb:
-#     container_name: mariadb
-#     build: ./requirements/mariadb
-#     expose:
-#       - "3306"
-#     image: mariadb:42
-#     volumes:
-#       - mariadb:/var/lib/mysql
-#     env_file:
-#       - .env
-#     networks:
-#       - inception
-#     restart: on-failure
-#     healthcheck:
-#       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "--silent"]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 3
-
-#   nginx:
-#     container_name: nginx
-#     build: ./requirements/nginx
-#     image: nginx:42
-#     ports:
-#       - "443:443"
-#     depends_on:
-#       - wordpress
-#     volumes:
-#       - wordpress:/var/www/html
-#     networks:
-#       - inception
-#     env_file:
-#       - .env
-#     restart: on-failure
-
-#   wordpress:
-#     container_name: wordpress
-#     build: ./requirements/wordpress
-#     expose:
-#       - "9000"
-#     image: wordpress:42
-#     depends_on:
-#       mariadb:
-#         condition: service_healthy
-#     volumes:
-#       - wordpress:/var/www/html
-#     env_file:
-#       - .env
-#     environment:
-#       - WORDPRESS_SITE_URL=https://oharoon.42.fr
-#     networks:
-#       - inception
-#     restart: on-failure
-
-
-
-
-x-common-conf: &config
-  env_file: ".env"
-  restart: on-failure
+networks:
+  inception:
+    name: inception
+    driver: bridge
 
 services:
-  nginx:
-    <<: *config
-    container_name: nginx
-    build: ./requirements/nginx
-    ports:
-      - "443:443"
-    volumes:
-      - wordpress:/var/www/html
 
   mariadb:
-    <<: *config
     container_name: mariadb
     build: ./requirements/mariadb
     expose:
       - "3306"
+    image: mariadb:42
     volumes:
       - mariadb:/var/lib/mysql
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: on-failure
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx
+    image: nginx:42
+    ports:
+      - "443:443"
+    depends_on:
+      - wordpress
+    volumes:
+      - wordpress:/var/www/html
+    networks:
+      - inception
+    env_file:
+      - .env
+    restart: on-failure
 
   wordpress:
-    <<: *config
     container_name: wordpress
     build: ./requirements/wordpress
     expose:
       - "9000"
+    image: wordpress:42
+    depends_on:
+      mariadb:
+        condition: service_healthy
     volumes:
       - wordpress:/var/www/html
+    env_file:
+      - .env
+    environment:
+      - WORDPRESS_SITE_URL=https://oharoon.42.fr
+    networks:
+      - inception
+    restart: on-failure
 
-networks:
-  inception:
-    driver: bridge
 
-volumes:
-  wordpress:
-    driver: local
-    driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: /home/nexus/inception/data/wordpress
 
-  mariadb:
-    driver: local
-    driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: /home/nexus/inception/data/mariadb
+
+# x-common-conf: &config
+#   env_file: ".env"
+#   restart: on-failure
+
+# services:
+#   nginx:
+#     <<: *config
+#     container_name: nginx
+#     build: ./requirements/nginx
+#     ports:
+#       - "443:443"
+#     volumes:
+#       - wordpress:/var/www/html
+
+#   mariadb:
+#     <<: *config
+#     container_name: mariadb
+#     build: ./requirements/mariadb
+#     expose:
+#       - "3306"
+#     volumes:
+#       - mariadb:/var/lib/mysql
+
+#   wordpress:
+#     <<: *config
+#     container_name: wordpress
+#     build: ./requirements/wordpress
+#     expose:
+#       - "9000"
+#     volumes:
+#       - wordpress:/var/www/html
+
+# networks:
+#   inception:
+#     driver: bridge
+
+# volumes:
+#   wordpress:
+#     driver: local
+#     driver_opts:
+#       type: 'none'
+#       o: 'bind'
+#       device: /home/nexus/inception/data/wordpress
+
+#   mariadb:
+#     driver: local
+#     driver_opts:
+#       type: 'none'
+#       o: 'bind'
+#       device: /home/nexus/inception/data/mariadb
