--- a/srcs/requirements/nginx/emprestado.conf
+++ b/srcs/requirements/nginx/emprestado.conf
@@ -1,3 +1,4 @@
+
 server
 {
 	listen 443 ssl;
@@ -11,8 +12,22 @@ server
 	root /var/www/html/;
 	index index.php;
 	
+
+
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
 	}
+	
+	error_page 403 404 /404.html;
+    location = /404.html {
+        root /var/www/html/web-404;
+        internal;
+    }
+
+    error_page 500 502 503 504 /505.html;
+    location = /505.html {
+        root /var/www/html/web-500;
+        internal;
+    }
 }
