WORKING VERSION with theme

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,3 +1,5 @@
+#change volume devices to /home/login/data   according to subject
+
 volumes:
   wordpress:
     name: wordpress
@@ -74,57 +76,3 @@ services:
     networks:
       - inception
     restart: on-failure
-
-
-
-
-# x-common-conf: &config
-#   env_file: ".env"
-#   restart: on-failure
-
-# services:
-#   nginx:
-#     <<: *config
-#     container_name: nginx
-#     build: ./requirements/nginx
-#     ports:
-#       - "443:443"
-#     volumes:
-#       - wordpress:/var/www/html
-
-#   mariadb:
-#     <<: *config
-#     container_name: mariadb
-#     build: ./requirements/mariadb
-#     expose:
-#       - "3306"
-#     volumes:
-#       - mariadb:/var/lib/mysql
-
-#   wordpress:
-#     <<: *config
-#     container_name: wordpress
-#     build: ./requirements/wordpress
-#     expose:
-#       - "9000"
-#     volumes:
-#       - wordpress:/var/www/html
-
-# networks:
-#   inception:
-#     driver: bridge
-
-# volumes:
-#   wordpress:
-#     driver: local
-#     driver_opts:
-#       type: 'none'
-#       o: 'bind'
-#       device: /home/nexus/inception/data/wordpress
-
-#   mariadb:
-#     driver: local
-#     driver_opts:
-#       type: 'none'
-#       o: 'bind'
-#       device: /home/nexus/inception/data/mariadb
