--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,14 +5,14 @@ volumes:
     name: wordpress
     driver: local
     driver_opts:
-      device: ~/inception/data/wordpress
+      device: ~/data/wordpress
       o: bind
       type: none
   mariadb:
     name: mariadb
     driver: local
     driver_opts:
-      device: ~/inception/data/mariadb
+      device: ~/data/mariadb
       o: bind
       type: none
 
