Update and rename .env to EXAMPLE.env

--- a/srcs/EXAMPLE.env
+++ b/srcs/EXAMPLE.env
@@ -1,5 +1,5 @@
 
-LOGIN=oharoon
+LOGIN=USERNAME
 
 DOMAIN=${LOGIN}.42.fr
 
@@ -9,7 +9,7 @@ DOMAIN_IP=10.0.2.255
 CERTS_=/etc/ssl/nginx-selfsigned.crt
 
 MARIADB_ROOT_PASS=root123
-MARIADB_USER_NAME=oharoon
+MARIADB_USER_NAME=USERNAME
 MARIADB_USER_PASS=user123
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
@@ -20,11 +20,11 @@ WORDPRESS_DB_NAME=inception
 
 WORDPRESS_URL=https://${DOMAIN}
 WORDPRESS_TITLE="INCEPTION"
-WORDPRESS_ADMIN_URL=oharoon.42.fr/wp-admin
+WORDPRESS_ADMIN_URL=USERNAME.42.fr/wp-admin
 
-WORDPRESS_ADMIN_NAME=oharoon
+WORDPRESS_ADMIN_NAME=USERNAME
 WORDPRESS_ADMIN_PASS=admin123
-WORDPRESS_ADMIN_EMAIL=oharoon@gmail.com
+WORDPRESS_ADMIN_EMAIL=USERNAME@gmail.com
 
 WORDPRESS_USER_NAME=wordpress_user
 WORDPRESS_USER_PASS=123
